# Factor_Neutralizer

./: .gitignore  CHANGELOG.md  CHANGELOG_EN.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  README.md  README_EN.md  pyproject.toml  requirements.txt  setup.py  synthwave_intro.html
.github/workflows/: ci.yml
docs/: CODE_STYLE_REPORT.md  DEEP_BUG_ANALYSIS.md  FactorNeutralizer_详细说明文档.md  GITHUB_COMPLIANCE_AND_BUG_ANALYSIS.md  TECHNICAL_DOCUMENTATION.md  TECHNICAL_DOCUMENTATION_EN.md
examples/: 小样本模拟实例.py
factor_neutralizer/: __init__.py
factor_neutralizer/core/: FactorNeutralizer.py
factor_neutralizer/utils/: config_manager.py  error_handling.py  logger_config.py
factor_neutralizer/visualization/: visualization_module.py
scripts/: step_by_step_test.py  verify_neutralization_math.py
tests/integration/: test_integration.py
tests/unit/: test_bug_fixes.py  test_bug_fixes_priority.py  test_phase3_optimizations.py  test_unit_tests.py
